<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Andodab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="affiche_txt">Consulter</string>
    <string name="creer_base_txt">Créer une base</string>
    <string name="ajout_objet_txt">Ajouter un objet</string>
    <string name="edition_txt">Edition</string>
    <string name="title_activity_create_object">Créer un objet</string>
    <string name="title_activity_add_attribut">Ajouter attribut</string>
    <string name="title_activity_add_atribut">Ajouter attribut</string>
       <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="message_signing_in">Signing in…</string>
    <string name="blank_field_warning">Please populate this field</string>
    <string name="signup_link">New to Bootstrap? &lt;a href=http://www.androidbootstrap.com>Click here&lt;/a> to learn more.</string>
    <string name="message_bad_credentials">Email Address or Password is incorrect</string>
    <string name="message_auth_failed">Please enter a valid password</string>
    <string name="message_auth_failed_new_account">Please enter a valid email address &amp; password</string>
    <string name="timer_running">Timer is running</string>
    <string name="timer_is_paused">Timer is paused</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="title_timer">Timer</string>
    <string name="home">Home</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_home">Home</string>
    <string-array name="type_attribut"> 
        <item></item>       
        <item>Objet</item>
        <item>Primitif</item>
        <item>Valeur</item>   
   
    </string-array>
    <string-array name="type_primitif">        
        <item>String</item>
        <item>int</item>       
   
    </string-array>
        <string name="ajout_btn_txt">Ajouter</string>
        <string name="retour_btn_txt">Retour</string>
        <string name="valider_btn_txt">Valider</string>
        <string name="annuler_btn_txt">Annuler</string>
        <string name="ajout_att_plus_txt">+</string>
        <string name="choix_bd_lbl">Choisir BD</string>
        <string name="parent_lbl_txt">Parent</string>
        <string name="nom_btn_txt">Nom</string>
        <string name="attribus_lbl_txt">Attributs</string>
        <string name="hint_attribut_txt">Nom de l\'attribut</string>
        <string name="rr">frerfregreg</string>
        <string name="oki_dialog_txt">Ok</string>
        <string name="bt_annuler_dialog_txt">Annuler</string>
        <string name="txt_bd_choice">choisir la base</string>
        <string name="txt_choice_object">choisir l\'objet</string>
        <string name="id_btn_modif">modifier</string>
		<string name="refresh_action">Refresh</string>
        <string name="id_btn_delete">supprimer</string>
        <string name="logout_action">Logout</string>
    <string name="page_news">News</string>
    <string name="page_users">Users</string>
    <string name="page_checkins">Check In\'s</string>
    <string name="title_column">Title</string>
    <string name="location_column">Location</string>
    <string name="user_column">User</string>
    <string name="date_column">Date</string>
    <string name="error_loading_users">Loading users failed</string>
    <string name="error_loading_news">Loading news failed</string>
    <string name="error_loading_checkins">Loading check-ins failed</string>
    <string name="no_users">No Users</string>
    <string name="no_news">No News</string>
    <string name="avatar">Avatar</string>
    <string name="choose">Choose</string>

  

        <string name="hint_nom_bdd_txt">Entrez le nom de la BDD</string>

  

        <string name="hint_nom_txt">Nom d\'attribut</string>


</resources>
