<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/database"
    tools:context="fr.upem.m2.android.andodab.MainActivity" >
 

    <Button
        android:id="@+id/bt_afficher"
        style="@style/BootstrapButtonrech"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/affiche_txt" 
        android:width="300dp" 
        />

    <Button
        android:id="@+id/bt_creer_base"

        style="@style/BootstrapButtonadd"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/creer_base_txt"
        android:width="300dp" />

    <Button
        android:id="@+id/bt_ajout_objet"
        style="@style/BootstrapButtonadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ajout_objet_txt" 
        android:width="300dp"/>

    <Button
        android:id="@+id/bt_edition"
        style="@style/BootstrapButtonmodif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/edition_txt" 
        android:width="300dp"/>

</LinearLayout>