<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editAtt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gris"
    tools:context="fr.upem.m2.android.andodab.EditObjectActivity" >
    <TextView
        android:id="@+id/id_choice_bd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/txt_bd_choice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/id_spinner_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         />
    
    <TextView
        android:id="@+id/id_object_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:text="@string/txt_choice_object"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
       
        android:id="@+id/id_spinner_object"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
       />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/id_btn_modif_ob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_btn_modif" 
            android:background="@color/success"
            android:drawableRight="@drawable/modifier"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/id_btn_delete_ob"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/id_btn_delete" 
            android:background="@color/no"
            android:drawableRight="@drawable/annuler"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
